--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: jekyll-theme-slate
+#theme: jekyll-theme-slate
+remote_theme: pages-themes/slate@v0.2.0
 # remote_theme: pages-themes/modernist@v0.2.0
 title: José Moreno - Apunts
 description: Materials docents per a cicles formatius d'Informàtica
